# MLflow_practice

./: pyproject.toml
mlruns/0/: meta.yaml
mlruns/359837122134220754/: meta.yaml
mlruns/359837122134220754/0d7f0506d5f04103aa4b1c732f7c7e44/: meta.yaml
mlruns/359837122134220754/0d7f0506d5f04103aa4b1c732f7c7e44/metrics/: accuracy  entropy  precision  recall
mlruns/359837122134220754/0d7f0506d5f04103aa4b1c732f7c7e44/tags/: mlflow.runName  mlflow.source.name
