[tool.poetry]
name = "ml-lib"
version = "0.1.0"
description = ""
authors = ["Karim-1 <54839428+Karim-1@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "ml_lib"}]

[tool.poetry.dependencies]
python = "^3.10"
sklearn = "^0.0.post1"
mlflow = "^2.0.1"
cloudpickle = "^2.2.0"
pandas = "^1.5.1"
numpy = "^1.23.4"
scikit-learn = "^1.1.3"
imblearn = "^0.0"
matplotlib = "^3.6.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
